fixed header spacing

--- a/source/assets/stylesheets/_common.css.scss
+++ b/source/assets/stylesheets/_common.css.scss
@@ -9,7 +9,7 @@
     color:$mustard;
     margin-top:75px;
     font-size:52px;
-    margin-left:190px;
+    margin-left:30px;
     @include media($mobile, $tablet) {
       font-size: 35px;
       line-height: 1;
